--- a/PanamaAdventureHTML/Food.html
+++ b/PanamaAdventureHTML/Food.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Panama Adventure - Food</title>
-	<link rel="stylesheet" rel="stylesheet" href="css/PanamaAdventure.css">
+	<link rel="stylesheet" rel="stylesheet" href="/Users/jiwandagale-rogers/Desktop/PanamaAdventureHTML/PanamaAdventure.css>
 </head>
 <body>
 	<header>
