--- a/PanamaAdventureHTML/ThingstoDo.html
+++ b/PanamaAdventureHTML/ThingstoDo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Panama Adventures - Things to Do</title>
-	<link rel="stylesheet" href="css/PanamaAdventure.css">
+	<link rel="stylesheet" href="/Users/jiwandagale-rogers/Desktop/PanamaAdventureHTML/PanamaAdventure.css">
 </head>
 <body>
 	<header>
