--- a/PanamaAdventureHTML/PA-Index-1.html
+++ b/PanamaAdventureHTML/PA-Index-1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Panama Adventure - Home</title>
-	<link rel="stylesheet" href="css/PanamaAdventure.css">
+	<link rel="stylesheet" href="/Users/jiwandagale-rogers/Desktop/PanamaAdventureHTML/PanamaAdventure.css">
 </head>
 <body>
 
